--- a/06-logging-tracing/zipkin-server/pom.xml
+++ b/06-logging-tracing/zipkin-server/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.42talents</groupId>
-	<artifactId>zuul-gateway</artifactId>
+	<artifactId>zipkin-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>zuul-gateway</name>
-	<description>Spring Cloud Workshop - Zuul Gateway</description>
+	<name>zipkin-server</name>
+	<description>Spring Cloud Workshop - Zipkin Server</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -37,36 +37,27 @@
 	</dependencyManagement>
 
 	<dependencies>
-	
-		<!-- TODO 1: Just add spring-cloud-starter-sleuth to add tracing to the 
-			log statements. You will see a difference after adding and rerunning the 
-			zuul service. When running, make sure only eureka is running too. Btw. We 
-			added for you the config in most of the other projects ourself. -->
+		<!-- TODO 2: Add the dependencis for the zipkin server: spring-cloud-starter-zipkin 
+			and zipkin-server -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-sleuth</artifactId>
+			<artifactId>spring-cloud-starter-zipkin</artifactId>
 		</dependency>
 
-		<!-- TODO 5: Use spring-cloud-sleuth-zipkin to forward the logs for analisation 
-			to zipkin (over http). As before we did it for your other services too! -->
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+			<groupId>io.zipkin.java</groupId>
+			<artifactId>zipkin-server</artifactId>
 		</dependency>
 
-		<!-- TODO 3: Make sure you have the eureka discovery client dependency 
-			so that zuul resolves service names from eureka -->
+		<!-- TODO 6: Add Zipkin UI dependency -->
 		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-eureka</artifactId>
+			<groupId>io.zipkin.java</groupId>
+			<artifactId>zipkin-autoconfigure-ui</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
-		<!-- TODO 1: Add spring-cloud-starter-zuul dependency for ZUUL Gateway 
-			API -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-zuul</artifactId>
-		</dependency>
+		<!-- TODO 7: Try to open the Zipkin UI, generate some load, disable the 
+			event-service and browse through the traced logs. -> http://localhost:9411 -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
