--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@
 06-logging-tracing/zipkin-server/.mvn
 06-logging-tracing/zuul-gateway/.mvn
 06-logging-tracing/eureka-server/.mvn
+07-microservices-admin/config-server/.mvn
+07-microservices-admin/eureka-server/.mvn
+07-microservices-admin/event-circuitbreaker/.mvn
+07-microservices-admin/event-frontend/.mvn
+07-microservices-admin/event-service/.mvn
+07-microservices-admin/hystrix-dashboard/.mvn
+07-microservices-admin/microservices-admin/.mvn
+07-microservices-admin/zipkin-server/.mvn
+07-microservices-admin/zuul-gateway/.mvn
