--- a/02-discovery-service/eureka-server/pom.xml
+++ b/02-discovery-service/eureka-server/pom.xml
@@ -40,6 +40,17 @@
 	</dependencyManagement>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
+		</dependency>
+
 		<!-- TODO 2: Add spring-cloud-starter-eureka-server as a Maven dependency -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
